# visionsoftware-template

./: .gitignore  CMakeLists.txt  README.md
include file/Dalsa/CameraInterface/: .gitignore  CMakeLists.txt  CameraInterfaceConfig.cmake
include file/Dalsa/CameraInterface/BaslerCameraInterface/: BaslerCameraInterface.cxx  BaslerCameraSettingDialog.ui  baslercamerainterface.hxx
include file/Dalsa/CameraInterface/BaumerCameraInterface/: BaumerCameraInterface.cpp  BaumerCameraInterface.h
include file/Dalsa/CameraInterface/CameraInterface/: VirtualCameraInterface.hxx  camerainterface.hxx
include file/Dalsa/CameraInterface/HCCameraInterface/: HCCameraInterface.cpp  HCCameraInterface.h  HCCameraInterface.vcxproj  HCCameraInterface.vcxproj.filters
include file/Dalsa/CameraInterface/MindVisionCameraInterface/: mindvisioncamerainterface.cpp  mindvisioncamerainterface.h
src/: QTandOpencv.aps
src/Camer/: DalsaCameraInterface.cpp  DalsaCameraInterface.h
src/Communication/: CommunicationAdmini.cpp  CommunicationAdmini.ui  CommunicationBtn.h  TCPclient.cpp  TCPclient.ui  TCPserver.ui  UDPserver.cpp  UDPserver.h  UDPserver.ui
src/Form Files/: ImageView.ui  MainParametricWindow.ui  MainWindows.ui  MyWorkWindow.ui  ProductionWindows.ui  ProductsAdd.ui  QLoadingWidget.ui
src/Header Files/: ImageView.h  MainParametricWindow.h  MyWorkWindow.h  ProductsAdd.h  QtWidgetsSaveLoad.h  Useme.h
src/Source Files/: ImageView.cpp  MainParametricWindow.cpp  MainWindows.cpp  MyWorkWindow.cpp  ProductionWindows.cpp  ProductsAdd.cpp  UseAlgorithm.cpp
src/Tensorflow/: TFUtils.cpp  TensorRunnerNativeInterface.h
src/Translation Files/: qtandopencv_en.ts
src/UserAdmini/: UserAdmini.cpp  UserWindow.h
src/src/: QTandOpencv.qrc
src/src/Camer/: MyCamer.cpp  MyCamer.h
src/src/Communication/: CommunicationAdd.cpp  CommunicationAdd.h  CommunicationAdd.ui  CommunicationAdmini.h  CommunicationBtn.cpp  CommunicationBtn.ui  TCPclient.h  TCPserver.cpp  TCPserver.h
src/src/Form Files/: WorkParametricWindow.ui
src/src/Header Files/: FriendFuntion.h  MainWindows.h  ProductionWindows.h  QLoadingWidget.h  UseAlgorithm.h  Useopencv.h  WorkParametricWindow.h  resource.h  workThread.h
src/src/Source Files/: FriendFuntion.cpp  QLoadingWidget.cpp  QtWidgetsSaveLoad.cpp  Useopencv.cpp  WorkParametricWindow.cpp  main.cpp  workThread.cpp
src/src/Tensorflow/: TFUtils.h  TensorRunnerNativeInterface.cpp
src/src/UserAdmini/: UserAdmini.h  UserAdmini.ui  UserWindow.cpp  UserWindow.ui
